--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 Test1/model.pt filter=lfs diff=lfs merge=lfs -text
-Test4/ema-model.pt filter=lfs diff=lfs merge=lfs -text
-Test4/model.pt filter=lfs diff=lfs merge=lfs -text
+Test4/models/ddpm-deeplense.pt filter=lfs diff=lfs merge=lfs -text
+Test4/models/ema-ddpm-deeplense.pt filter=lfs diff=lfs merge=lfs -text
